# internal/server/handlers/auth_handler.go
@@ -1,6 +1,7 @@
 package handlers
 
 import (
+	"log"
 	"net/http"
 
 	r "github.com/hnifmaghfur/go-user-service/internal/requests"
@@ -23,10 +24,10 @@ func NewAuthHandler(authService *services.AuthService) AuthHandler {
 // @Tags Auth
 // @Accept json
 // @Produce json
-// @Param loginRequest body requests.LoginRequest true "Login Request"
-// @Success 200 {object} responses.TokenResponse
-// @Failure 400 {object} responses.Error
-// @Failure 500 {object} responses.Error
+// @Param login body requests.LoginRequest true "Login Request"
+// @Success 200 {object} models.LoginSuccess
+// @Failure 400 {object} models.ErrorBadRequestResponse
+// @Failure 500 {object} models.ErrorInternalServerErrorResponse
 // @Router /api/v1/login [post]
 func (ah *AuthHandler) Login(c echo.Context) error {
 	loginRequest := new(r.LoginRequest)
@@ -40,6 +41,7 @@ func (ah *AuthHandler) Login(c echo.Context) error {
 
 	token, err := ah.authService.Login(*loginRequest)
 	if err != nil {
+		log.Printf("error: %v", err)
 		return responses.ErrorResponse(c, http.StatusInternalServerError, "Internal Server Error")
 	}
 
@@ -55,8 +57,33 @@ func (ah *AuthHandler) Login(c echo.Context) error {
 	return responses.SuccessResponse(c, http.StatusOK, "Login Success", token.LoginResponse)
 }
 
+// Register Doc
+// @Summary Register
+// @Tags Auth
+// @Accept json
+// @Produce json
+// @Param registerRequest body requests.RegisterRequest true "Register Request"
+// @Success 200 {object} models.RegisterSuccess
+// @Failure 400 {object} models.ErrorBadRequestResponse
+// @Failure 500 {object} models.ErrorInternalServerErrorResponse
+// @Router /api/v1/register [post]
 func (ah *AuthHandler) Register(c echo.Context) error {
-	return nil
+	registerRequest := new(r.RegisterRequest)
+	if err := c.Bind(&registerRequest); err != nil {
+		return responses.ErrorResponse(c, http.StatusBadRequest, "Data is not valid")
+	}
+
+	if err := utils.ValidateRegisterRequest(*registerRequest); err != nil {
+		return responses.ErrorResponse(c, http.StatusBadRequest, "Data is not valid")
+	}
+
+	user, err := ah.authService.Register(*registerRequest)
+	if err != nil {
+		return responses.ErrorResponse(c, http.StatusInternalServerError, "Internal Server Error")
+	}
+
+	return responses.SuccessResponse(c, http.StatusOK, "Register Success", user.Email)
+
 }
 
 func (ah *AuthHandler) UpdatePassword(c echo.Context) error {
